# llm-video-frames

./: README.md  llm_video_frames.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_video_frames.py
